# python-pydantic-fk

./: LICENSE  README.md  pyproject.toml
pydantic_fk/: __init__.py  links.py
pydantic_fk/test/: test_links.py
