[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pydantic_fk"
description = "Pydantic Foreign Key feature metaclass."
version = "1.0.0"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"
authors = [
  {name = "Thiago Costa", email = "admin@rootbsd.info"},
]
dependencies = [
  "pydantic>=2",
]

[tool.setuptools.packages.find]
include = ["pydantic_fk"]

[project.optional-dependencies]
dev = [
  "mypy",
  "pylint",
  "pylint-per-file-ignores",
  "pytest",
]

[tool.pylint.MASTER]
load-plugins = [
  "pylint_per_file_ignores",
]

[tool.pylint.'messages control']
per-file-ignores = [
  "pydantic_fk/test/*:disallowed-name",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint]
disable = [
  "missing-module-docstring",
]

